--- a/app/globals.css
+++ b/app/globals.css
@@ -169,25 +169,40 @@
   pointer-events: none;
 }
 
-/* Вертикални линии отляво и отдясно - от край до край за screen preview */
-.pf-sheet::after {
-  content: '';
+/* Основни стилове за всички линии за рязане */
+.cut-line {
   position: absolute;
-  top: 0; /* От горен край */
-  bottom: 0; /* До долен край */
-  left: 9mm; /* На разстояние 9mm отляво */
+  top: 0;
+  bottom: 0;
   width: 0.5px;
-  background: #a79881;
+  background: grey;
   pointer-events: none;
-  box-shadow: calc(210mm - 18mm) 0 0 0 #a79881; /* Дясна линия на 9mm отдясно */
+  z-index: 10;
 }
+
+/* Позиции на всяка линия */
+.cut-line-1 {
+  left: 9mm;
+} /* Ляв край */
+.cut-line-2 {
+  left: 57mm;
+} /* След 1-ви етикет */
+.cut-line-3 {
+  left: 105mm;
+} /* След 2-ри етикет */
+.cut-line-4 {
+  left: 153mm;
+} /* След 3-ти етикет */
+.cut-line-5 {
+  left: 201mm;
+} /* Десен край */
 
 /* Основен контейнер на етикета */
 .pf-label {
   width: 48mm; /* Обновена ширина според дизайна */
   height: 45mm; /* Обновена височина според дизайна */
   background: #ff9500;
-  border: 0.5pt solid grey; /* Единичен бордер за всички */
+  border: 0.5px solid grey; /* Единичен бордер за всички */
   margin: 0 !important; /* Никакви margin-и */
   box-sizing: border-box; /* Супер важно! */
   display: flex;
@@ -384,20 +399,32 @@
     pointer-events: none !important;
   }
 
-  /* Вертикални линии отляво и отдясно - от край до край */
-  body .pf-sheet::after,
-  div.pf-sheet::after,
-  .pf-sheet::after {
-    content: '' !important;
+  /* Print стилове за линиите за рязане */
+  .cut-line {
     position: absolute !important;
-    top: 0 !important; /* От горен край */
-    bottom: 0 !important; /* До долен край */
-    left: 9mm !important; /* На разстояние 9mm отляво */
+    top: 0 !important;
+    bottom: 0 !important;
     width: 0.5px !important;
     background: #a79881 !important;
     pointer-events: none !important;
-    box-shadow: calc(210mm - 18mm) 0 0 0 #a79881 !important; /* Дясна линия на 9mm отдясно */
+    z-index: 10 !important;
   }
+
+  .cut-line-1 {
+    left: 9mm !important;
+  } /* Ляв край */
+  .cut-line-2 {
+    left: 57mm !important;
+  } /* След 1-ви етикет */
+  .cut-line-3 {
+    left: 105mm !important;
+  } /* След 2-ри етикет */
+  .cut-line-4 {
+    left: 153mm !important;
+  } /* След 3-ти етикет */
+  .cut-line-5 {
+    left: 201mm !important;
+  } /* Десен край */
 
   /* Стилизиране на етикетите за печат */
   .pf-label {
